--- a/TOP/brojs/style.css
+++ b/TOP/brojs/style.css
@@ -1,5 +1,9 @@
 *{
     background-color: rgba(216, 192, 0, 0.99);
     color: blueviolet;
+    margin: 0;
 }
 
+#myBox{
+    position: relative;
+}
