--- a/TOP/intermediate-html/morecssproperties/styles.css
+++ b/TOP/intermediate-html/morecssproperties/styles.css
@@ -7,3 +7,16 @@ body{
     font-weight: 800;
     color: hsl(60, 100%, 30%);
 }
+
+.border{
+    border: 0.5rem outset pink;
+    outline: 0.5rem solid khaki;
+    box-shadow: 0 0 0 2rem skyblue;
+    border-radius: 12px;
+    font: bold 1rem sans-serif;
+    margin: 2rem;
+    padding: 1rem;
+    outline-offset: 0.5rem;
+    color:white
+  }
+  
