--- a/TOP/forms/styles.css
+++ b/TOP/forms/styles.css
@@ -1,53 +1,117 @@
-h1 {
-  margin-top: 0;
+@font-face {
+  font-family: "handwriting";
+  src:
+    url("fonts/Journal.woff2") format("woff2"),
+    url("fonts/Journal.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-ul {
+@font-face {
+  font-family: "typewriter";
+  src:
+    url("fonts/MomsTypewriter.woff2") format("woff2"),
+    url("fonts/MomsTypewriter.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font: 1.3rem sans-serif;
+  padding: 0.5em;
   margin: 0;
-  padding: 0;
-  list-style: none;
+  background: #222;
 }
 
 form {
+  position: relative;
+  width: 740px;
+  height: 498px;
   margin: 0 auto;
-  width: 400px;
   padding: 1em;
-  border: 1px solid #ccc;
-  border-radius: 1em;
-}
-
-label span {
-  display: inline-block;
-  text-align: right;
-}
-
-input,
-fieldset {
-  font: 1em sans-serif;
-  width: 250px;
   box-sizing: border-box;
-  border: 1px solid #999;
+  background: #fff url(background.jpg);
+
+  /* we create our grid */
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 10em 1em 1em 1em;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-  width: auto;
-  border: none;
+h1 {
+  font:
+    1em "typewriter",
+    monospace;
+  align-self: end;
 }
 
-input:focus {
-  background-color: yellow;
+#message {
+  grid-row: 1 / 5;
 }
 
-button {
-  margin: 20px 0 0 0;
+#from,
+#reply {
+  display: flex;
 }
 
 label {
-  display: inline-block;
+  font:
+    0.8em "typewriter",
+    sans-serif;
 }
 
-p label {
+input,
+textarea {
+  font:
+    1.4em/1.5em "handwriting",
+    cursive,
+    sans-serif;
+  border: none;
+  padding: 0 10px;
+  margin: 0;
+  width: 80%;
+  background: none;
+}
+
+input:focus,
+textarea:focus {
+  background: rgb(0 0 0 / 10%);
+  border-radius: 5px;
+}
+
+textarea {
+  display: block;
+
+  padding: 10px;
+  margin: 10px 0 0 -10px;
   width: 100%;
+  height: 90%;
+
+  border-right: 1px solid;
+
+  /* resize  : none; */
+  overflow: auto;
+}
+
+
+button {
+  padding: 5px;
+  font: bold 0.6em sans-serif;
+  border: 2px solid #333;
+  border-radius: 5px;
+  background: none;
+  cursor: pointer;
+  transform: rotate(-1.5deg);
+}
+
+button::after {
+  content: " >>>";
+}
+
+button:hover,
+button:focus {
+  background: #000;
+  color: #fff;
 }
 
