--- a/TOP/intermediate-html/advanced-grid/styles.css
+++ b/TOP/intermediate-html/advanced-grid/styles.css
@@ -27,4 +27,4 @@ img {
   height: 60px;
 }
 
-/* place-items does the work of both align itemms and justify items together */
+/* place-items does the work of both align itemms and justify items togethergrid dont replace flexbox */
