--- a/TOP/intermediate-html/02-responsive-holy-grail/styles.css
+++ b/TOP/intermediate-html/02-responsive-holy-grail/styles.css
@@ -6,9 +6,8 @@
 .container {
 	display: grid;
 	text-align: center;
-	grid-template-columns: 1fr 5fr;
-	grid-template-rows: 1fr 1fr 6fr 1fr;
-	gap: 5px;
+	grid-template-columns: 1fr 4fr;
+	gap: 4px;
 }
 
 .container div {
@@ -21,11 +20,9 @@
 
 .header {
 	background-color: #393f4d;
-	grid-area: 1/1/2/3;
+	grid-column: 1/3;
 	display: grid;
-	grid-template-columns: 1fr 3fr;
-	gap: 25vw;
-	align-content: center;
+	grid-template-columns: 1fr 2fr;
 }
 
 .menu ul,
@@ -37,21 +34,17 @@
 .menu ul {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	justify-items: center;
-
 }
 
 .menu {
-	align-content: center;
+	align-self: center;
 }
 
 .sidebar {
 	background-color: #C50208;
-	grid-area: 2/1/4/2;
+	grid-row: 2/4;
 	display: grid;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
-	padding: 15px;
-	gap: 20px;
+	gap: 50px;
 }
 
 .sidebar .photo {
@@ -60,6 +53,8 @@
 	font-size: 12px;
 	font-weight: normal;
 	border-radius: 10px;
+	align-items: center;
+	display: grid;
 }
 
 
@@ -68,6 +63,7 @@
 	color: black;
 	font-size: 16px;
 	font-weight: normal;
+	align-content: center;
 }
 
 .nav {
@@ -89,7 +85,6 @@
 
 .article {
 	background-color: #bccbde;
-	grid-area: 3/2/4/3;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	gap: 15px;
@@ -106,12 +101,14 @@
 	background-color: #FFFFFF;
 	color: black;
 	text-align: center;
+	height: 200px;
 }
 
 .card p {
 	color: black;
 	font-weight: normal;
 	font-size: 14px;
+	padding: 5px;
 }
 
 .card .title {
@@ -121,10 +118,14 @@
 
 .footer {
 	background-color: #393f4d;
-	grid-area: 4/1/5/3;
+	grid-column: 1/3;
 }
 
 .footer p {
 	font-size: 13px;
 	font-weight: normal;
+}
+
+.logo {
+	justify-self: start;
 }
