making the footer at the bottom

--- a/TOP/intermediate-html/02-responsive-holy-grail/styles.css
+++ b/TOP/intermediate-html/02-responsive-holy-grail/styles.css
@@ -7,7 +7,9 @@
 	display: grid;
 	text-align: center;
 	grid-template-columns: 1fr 4fr;
+	grid-template-rows: auto 1fr auto;
 	gap: 4px;
+	min-height: 100vh;
 }
 
 .container div {
